# fampay_fetch_videos

./: README.md  docker-compose.yml  dockerfile  manage.py  pyproject.toml
celery_job/: __init__.py  apps.py  celery.py  tasks.py
fetch_videos/: admin.py  apps.py  asgi.py  celery.py  models.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
fetch_videos/migrations/: 0001_initial.py  0002_videomodel_thumbnail.py
nginx/: nginx.conf
