[tool.poetry]
name = "fetch-videos"
version = "0.1.0"
description = ""
authors = ["Subhanshu <Subhanshu@goel.com>"]
readme = "README.md"
packages = [{include = "fetch_videos"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.5"
psycopg2 = "^2.9.5"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
